--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@uiw/react-textarea-code-editor": "^1.3.1",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -27,9 +27,10 @@
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "mobx-react-lite": "^3.2.1",
+    "mongodb": "^5.1.0",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
-    "node-sass": "^4",
+    "node-sass": "^4.14",
     "openai-api": "^1.2.3",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
@@ -41,6 +42,7 @@
     "react-textarea-autosize": "^8.3.3",
     "react-typist": "2.0.5",
     "recoil": "^0.4.1",
+    "sass": "^1.59.3",
     "showdown": "^1.9.1",
     "stripe": "^8.167.0",
     "styled-components": "^5.3.0",
