--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@
 OPENAI_API_KEY=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
 
 # MongoDB
+
 # mongodb+srv://OpenAI:MLJVXSXRobak9qjy@chatgpt.xzjxu.mongodb.net/test
-MONGO_PASSWORD=XESDZm6fa8EipSju
+MONGO_PASSWORD=u4BIaBov6mH70sWn
 MONGO_DATABASE=myFirstDatabase
 MONGO_URL_NAME=OpenAI 
 MONGO_URL_CLUSTER=chatgpt.xzjxu.mongodb.net/test
@@ -15,8 +16,8 @@ STRIPE_PRODUCT_ENTRY=price_1MRgnlChR8bIp3a6UuiN3CcB
 STRIPE_PRODUCT_PRO=price_1MRgnyChR8bIp3a6pIb7QsaY
 STRIPE_WEBHOOK_SECRET=whsec_YIGzaZppWtiT3e8DUDTnjDghIf78peLJ
 
-# DOMAIN=http://desovr.link
-DOMAIN=http://localhost:3080
+DOMAIN=http://unitelligent.xyz
+#DOMAIN=http://localhost:3080
 
 # user: OpenAI
 # pass: XESDZm6fa8EipSju
